// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package delivery.grpc;

option go_package = "github.com/godpeny/gos/delivery";
import "google/protobuf/timestamp.proto";

service Delivery {
  // A simple RPC impolementing 'User' CRUD
  rpc GetUser(UserRequest)returns(UserResponse) {};
  rpc ListUser(UserRequest) returns (UserListResponse) {};
  rpc CreateUser(UserRequest) returns (UserResponse) {};
  rpc UpdateUser(UserRequest) returns (UserResponse) {};
  rpc DeleteUser(UserRequest) returns (UserResponse) {};
}

// UserRequest
message UserRequest {
  string id = 1;
  string username = 2;
}

// UserResponse 
message UserResponse {
  string id = 1;
  string username = 2;
  google.protobuf.Timestamp createdAt = 3;
  google.protobuf.Timestamp updatedAt = 4;
  google.protobuf.Timestamp deletedAt = 5;
}

// UserListResponse 
message UserListResponse {
  repeated UserResponse items = 1;
  int32 count = 2;
  int32 total = 3;
}
